--- a/HR_comma_sep/人力资源行业数据分析案例.md
+++ b/HR_comma_sep/人力资源行业数据分析案例.md
@@ -13,14 +13,14 @@
 - 下载数据集并进行列重命名，删除空值和异常值，确保数据质量。
 - 清洗后的数据集包含14,999条记录。
 ## 4.2 辅助数据分析
-![[HR_comma_sep/img/1.PNG]]
-![[HR_comma_sep/img/2.PNG]]
+![HR_comma_sep/img/1.PNG](./img/1.PNG)
+![HR_comma_sep/img/2.PNG](./img/2.PNG)
 ## 4.3 报表生成
-![[3.1.PNG]]
-![[3.2.png]]
+![3.1.PNG](./img/3.1.PNG)
+![3.2.png](./img/3.2.png)
 ## 4.4 仪表盘创建
-![[4.png]]
-![[5.png]]
+![4.png](./img/4.png)
+![5.png](./img/5.png)
 # 5. 测试结果与分析
 
 - 发现3-6年司龄员工流失率高于平均流失率，进行进一步分析。
@@ -34,8 +34,9 @@
 附有清洗后数据样本、生成的报表/仪表板截图等其他补充信息，以便更详细地展示分析过程和结果。
 
 清洗后数据样本：
-![[HR_comma_sep.zip]]
+[HR_comma_sep.zip](./data/HR_comma_sep.zip)
+
 生成的报表/仪表板截图：
-![[HR_comma_sep/pdf/回答成功.pdf]]
+[HR_comma_sep/pdf/回答成功.pdf](./pdf/回答成功.pdf)
 
 🔍如需更详细的信息或开始动手练习，请访问我们的 [DeepData 存储库](https://github.com/DeepInsight-AI/DeepData)并参考相应的[文档](https://deepthought.feishu.cn/wiki/space/7323065464401477635?ccm_open_type=lark_wiki_spaceLink&open_tab_from=wiki_home)。祝您在数据分析之旅中取得成功！
