--- a/superstore/某超市2019-2022年经营数据分析案例.md
+++ b/superstore/某超市2019-2022年经营数据分析案例.md
@@ -13,8 +13,8 @@
   首先，我们获取了来自kaggle的“superstore_data”数据集，并进行了基础表的关联，新建了复购率和RFM表，为后续分析做好数据准备工作。
 ## 4.2 辅助数据分析
 
-![[1.png]]
-![[2.png]]
+![1.png](./img/1.png)
+![2.png](./img/2.png)
 # 5. 测试结果与分析
 
   通过DeepBI平台的分析，我们得出了以下结论：
@@ -30,8 +30,10 @@
    
 附有清洗后数据样本、生成的报表/仪表板截图等其他补充信息，以便更详细地展示分析过程和结果。
 
- 清洗后数据样本：
- ![[superstore_data.zip]]生成的报表/仪表板截图：
-  ![[superstore/pdf/回答成功.pdf]]
+清洗后数据样本：
+[superstore_data.zip](./data/superstore_data.zip)
+
+生成的报表/仪表板截图：
+[superstore/pdf/回答成功.pdf](./pdf/回答成功.pdf)
 
 🔍如需更详细的信息或开始动手练习，请访问我们的 [DeepData 存储库](https://github.com/DeepInsight-AI/DeepData)并参考相应的[文档](https://deepthought.feishu.cn/wiki/space/7323065464401477635?ccm_open_type=lark_wiki_spaceLink&open_tab_from=wiki_home)。祝您在数据分析之旅中取得成功！
