--- a/HR_comma_sep/人力资源行业数据分析案例.md
+++ b/HR_comma_sep/人力资源行业数据分析案例.md
@@ -37,6 +37,6 @@
 [HR_comma_sep.zip](./data/HR_comma_sep.zip)
 
 生成的报表/仪表板截图：
-[HR_comma_sep/pdf/回答成功.pdf](./pdf/回答成功.pdf)
+[HR_comma_sep/pdf/案例全部截图.pdf](./pdf/案例全部截图.pdf)
 
 🔍如需更详细的信息或开始动手练习，请访问我们的 [DeepData 存储库](https://github.com/DeepInsight-AI/DeepData)并参考相应的[文档](https://deepthought.feishu.cn/wiki/space/7323065464401477635?ccm_open_type=lark_wiki_spaceLink&open_tab_from=wiki_home)。祝您在数据分析之旅中取得成功！
