--- a/german_credit/银行客户贷款综合分析案例.md
+++ b/german_credit/银行客户贷款综合分析案例.md
@@ -12,8 +12,8 @@
 
   数据准备从和鲸社区下载德国人信贷风险数据。
 ## 4.2 辅助数据分析
-![[german_credit/img/1.PNG]]
-![[german_credit/img/2.PNG]]
+![german_credit/img/1.PNG](./img/1.PNG)
+![german_credit/img/2.PNG](./img/2.PNG)
 # 5. 测试结果与分析
 
   通过DeepBI平台的辅助数据分析，我们成功获取了关于个人贷款客户的详细信息。总体上，我们了解到20-40岁的人是贷款的主力军。
@@ -31,8 +31,8 @@
 - 其他补充信息
 
 清洗后数据样本：
-![[german_credit_data.zip]]
+[german_credit_data.zip](./data/german_credit_data.zip)
 生成的报表/仪表板截图：
-![[成功回答.pdf]]
+[成功回答.pdf](./pdf/案例全部截图.pdf)
 
 🔍如需更详细的信息或开始动手练习，请访问我们的 [DeepData 存储库](https://github.com/DeepInsight-AI/DeepData)并参考相应的[文档](https://deepthought.feishu.cn/wiki/space/7323065464401477635?ccm_open_type=lark_wiki_spaceLink&open_tab_from=wiki_home)。祝您在数据分析之旅中取得成功！
