--- a/superstore/某超市2019-2022年经营数据分析案例.md
+++ b/superstore/某超市2019-2022年经营数据分析案例.md
@@ -34,6 +34,6 @@
 [superstore_data.zip](./data/superstore_data.zip)
 
 生成的报表/仪表板截图：
-[superstore/pdf/回答成功.pdf](./pdf/回答成功.pdf)
+[superstore/pdf/案例全部截图.pdf](./pdf/案例全部截图.pdf)
 
 🔍如需更详细的信息或开始动手练习，请访问我们的 [DeepData 存储库](https://github.com/DeepInsight-AI/DeepData)并参考相应的[文档](https://deepthought.feishu.cn/wiki/space/7323065464401477635?ccm_open_type=lark_wiki_spaceLink&open_tab_from=wiki_home)。祝您在数据分析之旅中取得成功！
