--- a/german_credit/银行客户贷款综合分析案例.md
+++ b/german_credit/银行客户贷款综合分析案例.md
@@ -11,9 +11,13 @@
 ## 4.1 数据准备
 
   数据准备从和鲸社区下载德国人信贷风险数据。
+  点击下方即可下载我们清洗后的数据：
+  [german_credit_data.zip](./data/german_credit_data.zip)
 ## 4.2 辅助数据分析
 ![german_credit/img/1.PNG](./img/1.PNG)
 ![german_credit/img/2.PNG](./img/2.PNG)
+点击下方下载查看更多截图：
+[成功回答.pdf](./pdf/案例全部截图.pdf)
 # 5. 测试结果与分析
 
   通过DeepBI平台的辅助数据分析，我们成功获取了关于个人贷款客户的详细信息。总体上，我们了解到20-40岁的人是贷款的主力军。
