--- a/HR_comma_sep/人力资源行业数据分析案例.md
+++ b/HR_comma_sep/人力资源行业数据分析案例.md
@@ -12,9 +12,13 @@
 
 - 下载数据集并进行列重命名，删除空值和异常值，确保数据质量。
 - 清洗后的数据集包含14,999条记录。
+  点击下方即可下载我们清洗后的数据：
+  [HR_comma_sep.zip](./data/HR_comma_sep.zip)
 ## 4.2 辅助数据分析
 ![HR_comma_sep/img/1.PNG](./img/1.PNG)
 ![HR_comma_sep/img/2.PNG](./img/2.PNG)
+点击下方下载查看更多截图：
+[HR_comma_sep/pdf/案例全部截图.pdf](./pdf/案例全部截图.pdf)
 ## 4.3 报表生成
 ![3.1.PNG](./img/3.1.PNG)
 ![3.2.png](./img/3.2.png)
